kube-persistent-volumn.yaml
# create pod consume pvc
apiVersion: v1 
kind: Pod 
metadata:
  name: my-pv-pod 
  labels:
    environment: testing 
    project: kubernetes-series
spec:
  containers:
    - image: flask-api 
      name: hello-kube 
      volumeMounts:
        - name: my-pod-volume
          mountPath: /data/db
      ports:
        - containerPort: 3000 
          protocol: TCP
      imagePullPolicy: Never 
  volumes:
    - name: my-pod-volume
      persistentVolumeClaim:
        claimName: my-first-pvc # specify PVCs we want to use

# # create storage class
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: fast
# provisioner: kubernetes.io/gce-pd # use gce-pd provisioner
# parameters:
#   type: pd-ssd
#   zone: europe-west1-b


# # create pvc with storage class
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mongodb-pvc
# spec:
#   storageClassName: fast # This PVC use fast StorageClass
#   resources:
#     requests:
#       storage: 100Mi
#   accessModes:
#     - ReadWriteOnce
