kube-pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod-staging
  labels:
    environment: staging # label with key is environment and value is staging
    project: kubernetes-series
spec:
  containers:
    - image: flask-api
      name: hello-kube
      ports:
        - containerPort: 3000
          protocol: TCP
      imagePullPolicy: Never

---
apiVersion: v1
kind: Pod
metadata:
  name: my-first-pod-production
  labels:
    environment: production # label with key is environment and value is production
    project: kubernetes-series
spec:
  containers:
    - image: flask-api
      name: hello-kube
      ports:
        - containerPort: 3000
          protocol: TCP
      imagePullPolicy: Never
