kube-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-deployment-svc
spec:
  type: NodePort
  selector:
    app: hello-kube
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000
